User domain refactor (#142)
* Endpoint move

* Style

* Lazy-load auth info

* Fix

* Fix 2

* Mapper refactor

* Ingredient mapper refactor

* Product mapper refactor

* Brand, category, provider mapper refactor

* User refactor

* Revert user id to long

* fix

* fix 2

* fix 3

* fix 4

* fix 5